# dj3fb

./: .coveragerc  HISTORY.md  MANIFEST.in  Makefile  README.md  README_ZH.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
dj3fb/: faker_utils.py
dj3fb/core/factory_utils/: factory_generator.py  factory_template.py  field_template_translater.py  field_templates.py  text.py
dj3fb/management/commands/: generate_factories.py
dj3fb/services/generate_factories_service/: __init__.py  factory_template.py  field_template_manager.py  field_template_translater.py  field_templates.py  generate_factories_service.py
scripts/: coverage.sh
test_project/test_app/factories/: category_factory.py
test_project/test_project/: settings.py
tests/: .coveragerc
tests/test_app/: models.py
tests/test_app/factories/: __init__.py  actor_factory.py  cinema_factory.py  licence_factory.py  movie_factory.py  user_factory.py
tests/test_app/tests/: test_faker_utils.py  test_generate_factories.py
tests/test_project/: settings.py
